# flex

./: .gitignore  CMakeLists.txt
include/flex/: CMakeLists.txt
include/flex/ds/: CMakeLists.txt  nil.hpp  typelist.hpp
include/flex/meta/: CMakeLists.txt  all_of.hpp  any_of.hpp  clear.hpp  concat.hpp  copy.hpp  copy_if.hpp  count.hpp  count_if.hpp  empty.hpp  fill.hpp  find.hpp  find_if.hpp  first.hpp  front.hpp  iota.hpp  none_of.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  rename.hpp  repeat.hpp  replace_front.hpp  reverse.hpp  second.hpp  size.hpp  tail.hpp  third.hpp  transform.hpp  transform_front.hpp  type_identity.hpp  unique.hpp
include/flex/utility/: CMakeLists.txt  ignore.hpp  negate.hpp  type_deduce.hpp
tests/: CMakeLists.txt
tests/source/: all_of.cpp  any_of.cpp  clear.cpp  copy.cpp  copy_if.cpp  count.cpp  count_if.cpp  empty.cpp  fill.cpp  find.cpp  find_if.cpp  front.cpp  iota.cpp  none_of.cpp  push_back.cpp  push_front.cpp  rename.cpp  repeat.cpp  replace_front.cpp  second.cpp  size.cpp  tail.cpp  third.cpp  transform.cpp  transform_front.cpp
